--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Proyectos de Angular</h1>
     <ul>
-        <li><a href="fundamentos/index.html">Ejemplo 1</a></li>
-        <li><a href="ejemplo2/index.html">Ejemplo 2</a></li>
-        <li><a href="ejemplo3/index.html">Ejemplo 3</a></li>
-        <li><a href="ejemplo4/index.html">Ejemplo 3</a></li>
+        <li><a href="fundamentos/">Fundamentos</a></li>
+        <li><a href="ejemplo2/">Ejemplo 2</a></li>
+        <li><a href="ejemplo3/">Ejemplo 3</a></li>
+        <li><a href="ejemplo4/">Ejemplo 4</a></li>
     </ul>
 </body>
 </html>
